<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorAccent">
    <ImageView
        android:id="@+id/imgCarte"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/book_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tv_titlu"
        android:layout_marginEnd="50dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        />
    <TextView
    android:id="@+id/tv_titlu"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/titlu1"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_titlu"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descriere1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_tip"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tv_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desc"
        android:layout_marginTop="5dp"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>